--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="chat application"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Zagel</title>
+    <title>Zajel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
